--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,10 @@
 <footer>
 	<div class="content width wide">
 		<div class="row">
-			<a href="#">Discord placeholder</a>
+			<a href="https://discord.gg/y8AHaRc">Join us on Discord!</a>
 		</div>
 		<div class="row">
-			<a href="#">CampusGroups placeholder</a>
-		</div>
-		<div class="row">
-			<a href="#">Facebook placeholder</a>
+			<a href="https://campusgroups.rit.edu/ritpagans/club_signup">Join us on CampusGroups!</a>
 		</div>
 	</div>
 </footer>
