--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,10 +3,12 @@
 		<div class="logo">
 			<h1>RIT<span>Pagans</span></h1>
 		</div>
-		<!-- <div class="links">
-			<a href="#">Menu1</a>
-			<a href="#">Menu2</a>
-			<a href="#">Menu3</a>
-		</div> -->
+		<div class="links">
+			<a href="https://discord.gg/y8AHaRc">
+				<img src="assets/images/Discord-Logo-White.svg" alt="">
+			</a>
+			<!-- <a href="#">Menu2</a>
+			<a href="#">Menu3</a> -->
+		</div>
 	</div>
 </header>
