--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 	    <title>{{ page.title }}</title>
 		<link rel="stylesheet" href="/assets/css/master.css">
-		<link href="https://fonts.googleapis.com/css?family=Dancing+Script:700|Lato|Roboto+Slab:300,700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Dancing+Script:700|Lato|Roboto+Slab:300,700|Sansita+Swashed&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
