--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -115,7 +115,7 @@ main{
 		padding: 0 1rem;
 	}
 	h1, h2, h3, h4, h5, h6{
-		font-family: $dance;
+		font-family: $cursive;
 		margin-left: -1rem;
 		margin-right: -1rem;
 	}
